--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,8 @@ services:
     container_name: crs-waf
     environment:
       - BACKEND=http://httpd-server
+      - PARANOIA=4
     ports:
       - "8080:80"
     depends_on:
       - web_server
-  nuclei:
-    image: projectdiscovery/nuclei:latest
-    hostname: nuclei
-    container_name: nuclei
-    entrypoint: nuclei -u http://crs-waf -t /root/nuclei-templates/cves/2022/CVE-2022-26134.yaml
-    depends_on:
-      - web_server
-      - modsec_crs
