--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ pytest = "^7.1.2"
 coverage = {extras = ["toml"], version = "^6.4.1"}
 pytest-cov = "^3.0.0"
 pytest-mock = "^3.7.0"
+black = "^22.3.0"
+flake8 = "^4.0.1"
+flake8-bandit = "^3.0.0"
+flake8-black = "^0.3.3"
+flake8-bugbear = "^22.4.25"
+safety = "^1.10.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -25,7 +31,7 @@ build-backend = "poetry.core.masonry.api"
 project-seaweed = "project_seaweed.extract_payload:main"
 
 [tool.coverage.paths]
-source=["src/"]
+source=["src/","*/site_packages"]
 
 [tool.coverage.run]
 branch= true
