--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 click = "^8.1.3"
 bs4 = "^0.0.1"
 requests = "^2.28.0"
+docker = "^5.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -28,7 +29,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-project-seaweed = "project_seaweed.extract_payload:main"
+project-seaweed = "project_seaweed.main:main"
 
 [tool.coverage.paths]
 source=["src/","*/site_packages"]
