--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ flake8-bandit = "^3.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^22.4.25"
 safety = "^1.10.3"
+flake8-annotations = "^2.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
