--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ flake8-black = "^0.3.3"
 flake8-bugbear = "^22.4.25"
 safety = "^1.10.3"
 flake8-annotations = "^2.9.0"
+mypy = "^0.961"
+types-requests = "^2.27.31"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
