--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["vandanrohatgi <vandanrohatgi@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "3.9.13"
 click = "^8.1.3"
 bs4 = "^0.0.1"
 requests = "^2.28.0"
@@ -32,7 +32,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-project-seaweed = "project_seaweed.main:main"
+project-seaweed = "src.project_seaweed.main:main"
 
 [tool.coverage.paths]
 source=["src/","*/site_packages"]
