--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ safety = "^1.10.3"
 flake8-annotations = "^2.9.0"
 mypy = "^0.961"
 types-requests = "^2.27.31"
+flake8-docstrings = "^1.6.0"
+darglint = "^1.8.1"
+xdoctest = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
