--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ types-requests = "^2.27.31"
 flake8-docstrings = "^1.6.0"
 darglint = "^1.8.1"
 xdoctest = "^1.0.0"
+typeguard = "^2.13.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
