--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ click = "^8.1.3"
 bs4 = "^0.0.1"
 requests = "^2.28.0"
 docker = "^5.0.3"
+PyGithub = "^1.55"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
