--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 
-[mypy-nox.*,pytest,click,docker,bs4,requests,click.testing,pytest_mock,requests.exceptions]
+[mypy-nox.*,pytest,click,docker,bs4,requests,click.testing,pytest_mock,requests.exceptions,yaml]
 ignore_missing_imports = True
