--- a/.github/workflows/test_run.yaml
+++ b/.github/workflows/test_run.yaml
@@ -38,7 +38,7 @@ jobs:
     - name: install poetry
       run: pip install poetry==1.1.13
     - name: install project
-      run: poetry install
+      run: poetry install --no-dev
     - name: run program
       run: poetry run project-seaweed tester
     - name: list files
