--- a/.github/workflows/test_run.yaml
+++ b/.github/workflows/test_run.yaml
@@ -7,6 +7,7 @@ on:
         description: 'Specify attack type using tags'
       out_file:
         description: 'name of the report file'
+        required: True
       format:
         description: 'format for the report'
       waf_url:
