--- a/.github/workflows/test_run.yaml
+++ b/.github/workflows/test_run.yaml
@@ -40,6 +40,7 @@ jobs:
       run: |
         wget https://github.com/projectdiscovery/nuclei/releases/download/v2.7.5/nuclei_2.7.5_linux_amd64.zip
         unzip nuclei_2.7.5_linux_amd64.zip
+        echo "$PWD" >> $GITHUB_PATH
     - name: install poetry
       run: pip install poetry==1.1.13
     - name: install project
