--- a/.github/workflows/test_run.yaml
+++ b/.github/workflows/test_run.yaml
@@ -38,8 +38,8 @@ jobs:
         architecture: x64
     - name: Install nuclei
       run: |
-        wget https://github.com/projectdiscovery/nuclei/releases/download/v2.7.5/nuclei_2.7.5_linux_amd64.zip
-        unzip nuclei_2.7.5_linux_amd64.zip
+        curl https://github.com/projectdiscovery/nuclei/releases/latest -s -L | egrep -o "/projectdiscovery/nuclei/releases/download/v[0-9]\.[0-9]\.[0-9]/nuclei_[0-9]\.[0-9]\.[0-9]_linux_amd64.zip" | wget --base=https://github.com -i -
+        unzip nuclei*.zip
         echo "$PWD" >> $GITHUB_PATH
     - name: install poetry
       run: pip install poetry==1.1.13
