Add latest folder update to schduled scan
A directory named 'latest' is automatically updated/created in the repo root based on the contents of the last scan

--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -114,7 +114,11 @@ jobs:
       with:
         name: ${{ matrix.tag }}-artifact
         path: ${{ env.TARGET_DIR }}
-    
+
+    - name: update latest
+      working-directory: ${{ env.DIR }}
+      run: cp -r ${{ env.TARGET_DIR }} latest/
+
     - name: commit changes
       working-directory: ${{ env.DIR }}
       run: |
