--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -116,7 +116,8 @@ jobs:
         path: ${{ env.TARGET_DIR }}
 
     - name: update latest
-      run: cp -r ${{ env.TARGET_DIR }} ${{ env.DIR }}/latest/
+      working-directory: ${{ env.DIR }}
+      run: echo "$(date -u +%Y/%b/%d)" > latest.txt
 
     - name: commit changes
       working-directory: ${{ env.DIR }}
