--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -124,10 +124,9 @@ jobs:
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git pull
         git add .
         git commit -m "generated files for ${{ matrix.tag }}"
-        git push
+        git -f push
 
 
 
