fix github actions

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,6 +27,6 @@ jobs:
         curl https://github.com/projectdiscovery/nuclei/releases/latest -s -L | egrep -o "/projectdiscovery/nuclei/releases/download/v[0-9]\.[0-9]\.[0-9]/nuclei_[0-9]\.[0-9]\.[0-9]_linux_amd64.zip" | wget --base=https://github.com -i -
         unzip nuclei*.zip
         echo "$PWD" >> $GITHUB_PATH
-        nuclei -ut
+        ./nuclei -ut
  
     - run: nox -s tests
