--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -126,7 +126,7 @@ jobs:
         git config user.email github-actions@github.com
         git add .
         git commit -m "generated files for ${{ matrix.tag }}"
-        git push --force-with-lease
+        git pull && git push
 
 
 
