Update 'commit changes' step as optional
When a test is run two times on the same day, latest.txt already is updated. This leads to an error where there is not change to commit. To fix this, we declare that step as optional

--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -138,7 +138,6 @@ jobs:
         repository: vandanrohatgi/Seaweed-Reports
         token: ${{ secrets.GAT }}
         path: ${{ env.DIR }}
-        fetch-depth: 20
     
     - name: update latest
       working-directory: ${{ env.DIR }}
@@ -154,6 +153,7 @@ jobs:
         git push
     
     - name: Send slack message
+      if: always()
       uses: slackapi/slack-github-action@v1.18.0
       with:
         payload: |
