--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -10,7 +10,7 @@ jobs:
   Project-runner:
     strategy:
       matrix:
-        tag: [lfi, fileupload]
+        tag: [xxe, traversal]
     name: Project runner
     env:
       TAG: ${{ matrix.tag }}
@@ -92,7 +92,7 @@ jobs:
       DIR: Seaweed-Reports
     strategy:
       matrix:
-        tag: [lfi, fileupload]
+        tag: [xxe, traversal]
   
     steps:
     - name: fetch repo
@@ -156,6 +156,10 @@ jobs:
                 {
                   "title": "Status",
                   "value": "Complete"
+                },
+                {
+                  "title": "cves tested",
+                  "value": "11"
                 }
               ]
             }
