--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -112,9 +112,13 @@ jobs:
         name: ${{ matrix.tag }}-artifact
         path: ${{ env.TARGET_DIR }}
 
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: Generated files for ${{ matrix.tag }}
+    - name: commit & push
+      run: |
+         git config user.name github-actions
+         git config user.email github-actions@github.com
+         git add .
+         git commit -m "generated files for ${{ matrix.tag }}"
+         git push
   
   Post-test-job:
     name: post testing action
