--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -88,21 +88,13 @@ jobs:
     name: Update report repository
     runs-on: ubuntu-20.04
     needs: [Project-runner]
-    strategy:
-      matrix:
-        tag: [lfi, xss, fileupload, xxe, injection, traversal, disclosure, auth-bypass, ssrf, sqli, oast, rce, '']
-  
+
     steps:
     - name: fetch repo
       uses: actions/checkout@v3
       with:
         repository: vandanrohatgi/Seaweed-Reports
         token: ${{ secrets.GAT }}
-        fetch-depth: 20
-    
-    - name: create and checkout branch
-      if: ${{ matrix.tag != '' }}
-      run: git checkout -B ${{ matrix.tag }}
     
     - name: set env
       run: echo "TARGET_DIR=$(date -u +%Y/%b/%d)" >> $GITHUB_ENV
@@ -113,19 +105,21 @@ jobs:
     - name: fetch artifact
       uses: actions/download-artifact@v3
       with:
-        name: ${{ matrix.tag }}-artifact
         path: ${{ env.TARGET_DIR }}
+
+    - name: update latest
+      run: echo ${{ env.TARGET_DIR }} > latest.txt
 
     - name: commit & push
       run: |
          git config user.name github-actions
          git config user.email github-actions@github.com
          git add .
-         git commit -m "generated files for ${{ matrix.tag }}"
-         git push --set-upstream origin ${{ matrix.tag }}
+         git diff --quiet && git diff --staged --quiet || git commit -m"Add reports & update latest.txt"
+         git push
   
-  Post-test-job:
-    name: post testing action
+  Slack-Update:
+    name: post slack message
     runs-on: ubuntu-20.04
     needs: [Update-repo]
 
