--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,9 @@ mypy = "^0.961"
 types-requests = "^2.27.31"
 flake8-docstrings = "^1.6.0"
 darglint = "^1.8.1"
-xdoctest = "^1.0.0"
 typeguard = "^2.13.3"
 PyYAML = "^6.0"
+sphinx-autodoc-typehints = "^1.19.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
