--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -118,6 +118,7 @@ jobs:
       run: |
          git config user.name github-actions
          git config user.email github-actions@github.com
+         git remote set-url origin git@github.com:${{ env.REPO_OWNER }}/seaweed-reports.git
          git add .
          git diff --quiet && git diff --staged --quiet || git commit -m"Add reports & update latest.txt"
          git push
