--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -12,7 +12,7 @@ jobs:
   Project-runner:
     strategy:
       matrix:
-        tag: [xxe]
+        tag: [lfi, xss, fileupload, xxe, injection, traversal, disclosure, auth-bypass, ssrf, sqli, oast, rce, '']
     name: Project runner
     env:
       TAG: ${{ matrix.tag }}
