--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["vandanrohatgi <vandanrohatgi@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.9.13"
+python = "^3.7"
 click = "^8.1.3"
 bs4 = "^0.0.1"
 requests = "^2.28.0"
@@ -31,7 +31,6 @@ flake8-docstrings = "^1.6.0"
 darglint = "^1.8.1"
 typeguard = "^2.13.3"
 PyYAML = "^6.0"
-sphinx-autodoc-typehints = "^1.19.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
