--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,13 @@ services:
       - "8080:80" 
     depends_on:
       - web_server
-#  nuclei:
-#    image: projectdiscovery/nuclei:latest
-#    hostname: nuclei
-#    container_name: nuclei
-#    entrypoint: nuclei -u https://sandbox.coreruleset.org -t /root/nuclei-templates/cves/2022/CVE-2022-26134.yaml -srd /results
-#    volumes:
-#      - ./results:/results:rw
-#    depends_on:
-#      - web_server
-#      - modsec_crs
+  nuclei:
+    image: projectdiscovery/nuclei:latest
+    hostname: nuclei
+    container_name: nuclei
+    entrypoint: nuclei -u http://crs-waf -tags xss,sqli -srd /results
+    volumes:
+      - ./results:/results:rw
+    depends_on:
+      - web_server
+      - modsec_crs
