--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -10,15 +10,12 @@ env:
 
 jobs:
   Project-runner:
-    strategy:
-      matrix:
-        tag: [lfi, xss, fileupload, xxe, injection, traversal, disclosure, auth-bypass, ssrf, sqli, oast, rce, '']
     name: Project runner
     env:
-      TAG: ${{ matrix.tag }}
-      OUT_FILE: ${{ matrix.tag }}Report.csv
+      TAG: "lfi,xss,fileupload,xxe,injection,traversal,disclosure,auth-bypass,ssrf,sqli,oast,rce"
       FORMAT: csv
       FULL_REPORT: true
+      INCLUDE_ALL: true
     runs-on: ubuntu-20.04
     
     steps:
@@ -47,43 +44,14 @@ jobs:
     - name: run program
       run: poetry run project-seaweed tester
     
-    - name: rename file
-      run: mv analysis.yaml ${{ matrix.tag }}Analysis.yaml
-    
     - name: upload report
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ matrix.tag }}Artifact
+        name: Reports
         path: |
-          ${{ env.OUT_FILE }}
-          ${{ matrix.tag }}Analysis.yaml
+          *.csv
+          analysis.yaml
         retention-days: 1
-    
-    - name: Failure
-      if: failure()
-      uses: slackapi/slack-github-action@v1.18.0
-      with:
-        payload: |
-          {
-          "text": "Program ran into an error",
-          "attachments": [
-            {
-              "pretext": "Incomplete",
-              "color": "c91a23",
-              "fields": [
-                {
-                  "title": "Status",
-                  "short": false,
-                  "value": "Incomplete",
-                  "Failing tag": ${{ matrix.tag }}
-                }
-              ]
-            }
-            ]
-          }
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
   
 
   Update-repo:
@@ -143,7 +111,7 @@ jobs:
 
         for field in cves_tested blocks non_blocks partial_blocks
         do
-          echo "$field=$(yq .$field Artifact/Analysis.yaml)" >> $GITHUB_ENV
+          echo "$field=$(yq .$field analysis.yaml)" >> $GITHUB_ENV
         done
 
     - name: Send slack message
@@ -183,5 +151,36 @@ jobs:
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+  
+  Failure-notification:
+    name: send failure message to slack
+    runs-on: ubuntu-20.04
+    if: ${{ failure() }}
+    steps:
+      - name: Failure slack message
+        uses: slackapi/slack-github-action@v1.18.0
+        with:
+          payload: |
+            {
+            "text": "Seems like Seaweed ran into an error :/",
+            "attachments": [
+              {
+                "color": "c91a23",
+                "fields": [
+                  {
+                    "title": "Status",
+                    "value": "Incomplete"
+                  },
+                  {
+                    "title": "Error Message"
+                    "value": ${{ core.error }}
+                  }
+                ]
+              }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
 
